# dhall-to-cabal

./: .gitignore  .travis.yml  Changelog.md  LICENSE  Main.hs  MonadRandom.nix  QuickCheck.nix  README.md  base-compat-batteries.nix  cabal-sdist.nix  cabal.nix  cabal.project  dhall-to-cabal.cabal  dhall-to-cabal.dhall  dhall-to-cabal.nix  dhall.nix  either.nix  megaparsec.nix  parser-combinators.nix  profunctors.nix  quickcheck-instances.nix  release.nix  semigroupoids.nix  shell.nix  splitmix.nix  stack.yaml  tasty-hunit.nix  test-package.dhall  text.nix
Distribution/Package/: Dhall.hs
cabal-to-dhall/: Main.hs
dhall/: GitHub-project.dhall  GitHubWithSourceRepo-project.dhall  empty-package.dhall  gitHubProject.dhall  mapSourceRepos.dhall  output.txt  prelude.dhall  stdlib.dhall  types.dhall  unconditional.dhall
dhall/PkgconfigVersionRange/: anyVersion.dhall  earlierVersion.dhall  intersectVersionRanges.dhall  laterVersion.dhall  orEarlierVersion.dhall  orLaterVersion.dhall  thisVersion.dhall  unionVersionRanges.dhall
dhall/SPDX/: and.dhall  license.dhall  licenseVersionOrLater.dhall  or.dhall  ref.dhall  refWithFile.dhall
dhall/Version/: v.dhall
dhall/VersionRange/: anyVersion.dhall  differenceVersionRanges.dhall  earlierVersion.dhall  intersectVersionRanges.dhall  invertVersionRange.dhall  laterVersion.dhall  majorBoundVersion.dhall  noVersion.dhall  notThisVersion.dhall  orEarlierVersion.dhall  orLaterVersion.dhall  thisVersion.dhall  unionVersionRanges.dhall  withinVersion.dhall
dhall/defaults/: Benchmark.dhall  BuildInfo  BuildInfo.dhall  CompilerOptions  CompilerOptions.dhall  Executable.dhall  Library.dhall  MainLibrary.dhall  NamedLibrary.dhall  Package.dhall  SourceRepo.dhall  TestSuite.dhall
dhall/types/: Arch  Arch.dhall  Benchmark.dhall  BuildInfo.dhall  BuildType.dhall  Compiler  Compiler.dhall  CompilerOptions  CompilerOptions.dhall  Config  Config.dhall  Dependency  Dependency.dhall  Executable.dhall  Extension  Extension.dhall  Flag.dhall  ForeignLibOption.dhall  ForeignLibType.dhall  ForeignLibrary.dhall  Guarded  Guarded.dhall  Language.dhall  Library  Library.dhall  LibraryName.dhall  LibraryVisibility.dhall  License  License.dhall  Mixin.dhall  ModuleRenaming.dhall  OS.dhall  Package.dhall  PkgconfigVersionRange.dhall  RepoKind.dhall  RepoType  RepoType.dhall  SPDX.dhall  Scope.dhall  SetupBuildInfo  (+7 more)
dhall/types/SPDX/: And.dhall  License.dhall  LicenseExceptionId.dhall  LicenseId.dhall  LicenseVersionOrLater.dhall  Or.dhall  Ref.dhall  RefWithFile.dhall
dhall/types/Version/: v.dhall
dhall/types/VersionRange/: AnyVersion.dhall  DifferenceVersionRanges.dhall  EarlierVersion.dhall  IntersectVersionRanges.dhall  InvertVersionRange.dhall  LaterVersion.dhall  MajorBoundVersion.dhall  NoVersion.dhall  NotThisVersion.dhall  OrEarlierVersion.dhall  OrLaterVersion.dhall  ThisVersion.dhall  UnionVersionRanges.dhall  WithinVersion.dhall
dhall/utils/: GitHub-project.dhall  majorVersions.dhall  mapBuildInfo.dhall  mapSourceRepos.dhall  package.dhall
docs/: conf.py  index.rst  requirements.txt  types.rst
exe/: Main.hs
golden-tests/: GoldenTests.hs  conditions.dhall  dhall-to-cabal.cabal  dhall-to-cabal.dhall  dhall.cabal  dhall.dhall  empty-package.cabal  empty-package.dhall  lens.cabal  lens.dhall  str-sig.cabal  str-sig.dhall
golden-tests/cabal-to-dhall/: SPDX.cabal  SPDX.dhall  autogen-includes.cabal  autogen-includes.dhall  benchmark.cabal  benchmark.dhall  conditional-dependencies.cabal  conditional-dependencies.dhall  default-license-2.2.cabal  default-license-2.2.dhall  executable.cabal  executable.dhall  extra-dyn-lib-flavours.cabal  extra-dyn-lib-flavours.dhall  gh-36.cabal  gh-36.dhall  haskell1898.cabal  haskell1898.dhall  haskell2010.cabal  haskell2010.dhall  haskell98.cabal  haskell98.dhall  lib-vis-2.cabal  lib-vis-2.dhall  lib-vis.cabal  lib-vis.dhall  mixins-no-signatures.cabal  mixins-no-signatures.dhall  multilib.cabal  multilib.dhall  otheros.cabal  otheros.dhall  repotypeunknown.cabal  repotypeunknown.dhall  simple.cabal  simple.dhall  sourcerepo-defaults.cabal  sourcerepo-defaults.dhall  unknown-license.cabal  unknown-license.dhall
golden-tests/dhall-to-cabal/: SPDX.cabal  SPDX.dhall  allrightsreserved-2.0.cabal  allrightsreserved-2.0.dhall  allrightsreserved-2.2.cabal  allrightsreserved-2.2.dhall  compiler-options-order.cabal  compiler-options-order.dhall  conditional-dependencies.cabal  conditional-dependencies.dhall  conditions.cabal  conditions.dhall  default-license-2.2.cabal  default-license-2.2.dhall  dhall-to-cabal.cabal  dhall-to-cabal.dhall  empty-package.cabal  empty-package.dhall  gh-53.cabal  gh-53.dhall  gh-55.cabal  gh-55.dhall  github-source-repo.cabal  github-source-repo.dhall  haskell1898.cabal  haskell1898.dhall  haskell98.cabal  haskell98.dhall  lib-vis-2.cabal  lib-vis-2.dhall  lib-vis.cabal  lib-vis.dhall  map-build-info.cabal  map-build-info.dhall  map-source-repo.cabal  map-source-repo.dhall  mixins-no-signatures.dhall  multilib.cabal  multilib.dhall  nested-conditions.cabal  (+1 more)
lib/: CabalToDhall.hs  DhallLocation.hs  DhallToCabal.hs  Version.hs  VersionRange.hs
lib/Dhall/: Extra.hs  RemoveDefault.hs
lib/DhallToCabal/: ConfigTree.hs  Diff.hs  FactorType.hs  Util.hs
lib/Distribution/Package/: Dhall.hs
meta/: Main.hs
overrides/: dhall.nix  ghc-paths.nix
tests/: Tests.hs
tests/DhallToCabal/: Tests.hs
