name: dhall-to-cabal
version: 0.1.0
cabal-version: 2.0
build-type: Simple
license: MIT
license-file: LICENSE
homepage: https://github.com/ocharles/dhall-to-cabal
bug-reports: https://github.com/ocharles/dhall-to-cabal/issues

source-repository head
    type: git
    location: https://github.com/ocharles/dhall-to-cabal

library
    exposed-modules:
        Distribution.Package.Dhall
        Dhall.Extra
    build-depends:
        Cabal ^>=2.0,
        base ^>=4.10,
        bytestring ^>=0.10,
        containers ^>=0.5,
        insert-ordered-containers ^>=0.2.1.0,
        dhall ^>=1.9 || ^>=1.10,
        hashable,
        text ^>=1.2,
        text-format ^>=0.3,
        transformers ^>=0.5.2,
        trifecta ^>=1.7,
        vector ^>=0.12
    other-extensions: ApplicativeDo GADTs GeneralizedNewtypeDeriving
                      LambdaCase OverloadedStrings RecordWildCards TypeApplications
    hs-source-dirs: lib
    other-modules:
        DhallToCabal.ConfigTree
        DhallToCabal.Diff
    ghc-options: -Wall -fno-warn-name-shadowing

executable  dhall-to-cabal
    main-is: Main.hs
    scope: public
    build-depends:
        Cabal ^>=2.0,
        base ^>=4.10,
        dhall ^>=1.9 || ^>= 1.10,
        dhall-to-cabal -any,
        optparse-applicative ^>=0.13.2 || ^>=0.14,
        prettyprinter ^>=1.1.1 || ^>=1.2.0.1,
        text ^>=1.2
    other-extensions: NamedFieldPuns
    hs-source-dirs: exe

executable  cabal-to-dhall
    main-is: Main.hs
    scope: public
    build-depends:
        Cabal ^>=2.0,
        base ^>=4.10,
        contravariant,
        dhall ^>=1.10,
        dhall-to-cabal -any,
        insert-ordered-containers ^>=0.2.1.0,
        hashable,
        optparse-applicative ^>=0.13.2 || ^>=0.14,
        prettyprinter ^>=1.2.0.1,
        text ^>=1.2
    other-extensions: NamedFieldPuns
    hs-source-dirs: cabal-to-dhall

test-suite  golden-tests
    type: exitcode-stdio-1.0
    main-is: GoldenTests.hs
    build-depends:
        base ^>=4.10,
        Cabal ^>=2.0,
        Diff ^>=0.3.4,
        bytestring ^>=0.10,
        dhall-to-cabal -any,
        filepath ^>=1.4,
        tasty ^>=0.11,
        tasty-golden ^>=2.3,
        text ^>=1.2
    hs-source-dirs: golden-tests

