name: dhall-to-cabal
version: 0.1.0
cabal-version: 2.0
build-type: Simple
license: OtherLicense

library
    exposed-modules:
        Distribution.Package.Dhall
    exposed: True
    buildable: True
    build-depends:
        base -any,
        Cabal -any,
        dhall -any,
        text -any,
        containers -any
    hs-source-dirs: lib

executable dhall-to-cabal
    main-is: Main.hs
    scope: public
    buildable: True
    build-depends:
        base -any,
        dhall-to-cabal -any,
        optparse-applicative -any,
        text -any,
        dhall -any,
        Cabal -any
    hs-source-dirs: exe

test-suite golden-tests
    type: exitcode-stdio-1.0
    main-is: GoldenTests.hs
    buildable: True
    build-depends:
        tasty-golden -any,
        dhall-to-cabal -any,
        bytestring -any,
        filepath -any,
        base -any,
        tasty -any,
        Cabal -any,
        text -any
    hs-source-dirs: golden-tests