name: dhall-to-cabal
version: 0.1.0
cabal-version: 2.0
build-type: Simple
license: GPL-3.0
homepage: https://github.com/ocharles/dhall-to-cabal
bug-reports: https://github.com/ocharles/dhall-to-cabal/issues

source-repository head
    type: git
    location: https://github.com/ocharles/dhall-to-cabal

library
    exposed-modules:
        Distribution.Package.Dhall
    exposed: True
    buildable: True
    build-depends:
        base ^>=4.10,
        Cabal ^>=2.0,
        dhall ^>=1.8,
        text ^>=1.2,
        bytestring ^>=0.10,
        containers ^>=0.5,
        vector ^>=0.12,
        trifecta ^>=1.7,
        text-format ^>=0.3
    hs-source-dirs: lib

executable dhall-to-cabal
    main-is: Main.hs
    scope: public
    buildable: True
    build-depends:
        base ^>=4.10,
        dhall-to-cabal -any,
        optparse-applicative ^>=0.13.2,
        text ^>=1.2,
        dhall ^>=1.8,
        Cabal ^>=2.0
    hs-source-dirs: exe

test-suite golden-tests
    type: exitcode-stdio-1.0
    main-is: GoldenTests.hs
    buildable: True
    build-depends:
        bytestring ^>=0.10,
        base ^>=4.10,
        Cabal ^>=2.0,
        text ^>=1.2,
        tasty ^>=0.11,
        filepath ^>=1.4,
        dhall-to-cabal -any,
        tasty-golden ^>=2.3
    hs-source-dirs: golden-tests