name: dhall
version: 1.8.2
cabal-version: 1.8.0.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 Gabriel Gonzalez
maintainer: Gabriel439@gmail.com
bug-reports: https://github.com/dhall-lang/dhall-haskell/issues
synopsis: A configuration language guaranteed to terminate
description:
    Dhall is an explicitly typed configuration language that is not Turing
    complete.  Despite being Turing incomplete, Dhall is a real programming
    language with a type-checker and evaluator.
    .
    Use this library to parse, type-check, evaluate, and pretty-print the Dhall
    configuration language.  This package also includes an executable which
    type-checks a Dhall file and reduces the file to a fully evaluated normal
    form.
    .
    Read "Dhall.Tutorial" to learn how to use this library
category: Compiler
author: Gabriel Gonzalez
tested-with: GHC ==8.0.1
extra-source-files:
    CHANGELOG.md
    Prelude/Bool/and
    Prelude/Bool/build
    Prelude/Bool/even
    Prelude/Bool/fold
    Prelude/Bool/not
    Prelude/Bool/odd
    Prelude/Bool/or
    Prelude/Bool/show
    Prelude/Double/show
    Prelude/Integer/show
    Prelude/List/all
    Prelude/List/any
    Prelude/List/build
    Prelude/List/concat
    Prelude/List/concatMap
    Prelude/List/filter
    Prelude/List/fold
    Prelude/List/generate
    Prelude/List/head
    Prelude/List/indexed
    Prelude/List/iterate
    Prelude/List/last
    Prelude/List/length
    Prelude/List/map
    Prelude/List/null
    Prelude/List/replicate
    Prelude/List/reverse
    Prelude/List/shifted
    Prelude/List/unzip
    Prelude/Monoid
    Prelude/Natural/build
    Prelude/Natural/enumerate
    Prelude/Natural/even
    Prelude/Natural/fold
    Prelude/Natural/isZero
    Prelude/Natural/odd
    Prelude/Natural/product
    Prelude/Natural/show
    Prelude/Natural/sum
    Prelude/Natural/toInteger
    Prelude/Optional/all
    Prelude/Optional/any
    Prelude/Optional/build
    Prelude/Optional/concat
    Prelude/Optional/filter
    Prelude/Optional/fold
    Prelude/Optional/head
    Prelude/Optional/last
    Prelude/Optional/length
    Prelude/Optional/map
    Prelude/Optional/null
    Prelude/Optional/toList
    Prelude/Optional/unzip
    Prelude/Text/concat
    Prelude/Text/concatMap
    Prelude/Text/concatMapSep
    Prelude/Text/concatSep
    tests/parser/*.dhall
    tests/regression/*.dhall

source-repository head
    type: git
    location: https://github.com/dhall-lang/dhall-haskell

library
    exposed-modules:
        Dhall
        Dhall.Context
        Dhall.Core
        Dhall.Import
        Dhall.Parser
        Dhall.Tutorial
        Dhall.TypeCheck
    build-depends:
        base >=4.9.0.0 && <5,
        ansi-wl-pprint <0.7,
        base16-bytestring <0.2,
        bytestring <0.11,
        case-insensitive <1.3,
        charset <0.4,
        containers >=0.5.0.0 && <0.6,
        contravariant <1.5,
        cryptohash <0.12,
        exceptions >=0.8.3 && <0.9,
        http-client >=0.4.30 && <0.6,
        http-client-tls >=0.2.0 && <0.4,
        lens >=2.4 && <4.16,
        parsers >=0.12.4 && <0.13,
        prettyprinter >=1.1.1 && <1.2,
        system-filepath >=0.3.1 && <0.5,
        system-fileio >=0.2.1 && <0.4,
        text >=0.11.1.0 && <1.3,
        text-format <0.4,
        transformers >=0.2.0.0 && <0.6,
        trifecta >=1.6 && <1.8,
        unordered-containers >=0.1.3.0 && <0.3,
        vector >=0.11.0.0 && <0.13
    hs-source-dirs: src
    ghc-options: -Wall

executable  dhall
    main-is: Main.hs
    scope: public
    build-depends:
        base >=4 && <5,
        dhall -any,
        optparse-generic >=1.1.1 && <1.3,
        prettyprinter -any,
        text >=0.11.1.0 && <1.3,
        trifecta >=1.6 && <1.8
    hs-source-dirs: dhall
    other-modules:
        Paths_dhall
    ghc-options: -Wall

executable  dhall-format
    main-is: Main.hs
    scope: public
    build-depends:
        base >=4 && <5,
        dhall -any,
        optparse-generic >=1.1.1 && <1.3,
        prettyprinter >=1.1.1 && <1.2,
        system-filepath >=0.3.1 && <0.5,
        text >=0.11.1.0 && <1.3,
        trifecta >=1.6 && <1.8
    hs-source-dirs: dhall-format
    other-modules:
        Paths_dhall
    ghc-options: -Wall

executable  dhall-hash
    main-is: Main.hs
    scope: public
    build-depends:
        base >=4 && <5,
        dhall -any,
        optparse-generic >=1.1.1 && <1.3,
        text >=0.11.1.0 && <1.3,
        trifecta >=1.6 && <1.8
    hs-source-dirs: dhall-hash

test-suite  test
    type: exitcode-stdio-1.0
    main-is: Tests.hs
    build-depends:
        base >=4 && <5,
        containers >=0.5.0.0 && <0.6,
        dhall -any,
        tasty >=0.11.2 && <0.13,
        tasty-hunit >=0.9.2 && <0.11,
        text >=0.11.1.0 && <1.3,
        vector >=0.11.0.0 && <0.13
    hs-source-dirs: tests
    other-modules:
        Examples
        Normalization
        Parser
        Regression
        Tutorial
        Util
    ghc-options: -Wall

