name: str-sig
version: 0.1.0.2
cabal-version: 1.25
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: ezyang@cs.stanford.edu
synopsis: Signature package for String-like types.
description:
    This package provides a Str signature which defines
    common namespace of functionality provided by
    string packages.  Implementations of subsets of
    this signature can be found in str-string,
    str-bytestring, str-text and str-foundation.
    .
    Once this signature is stabilized, this package
    will never introduce a backwards incompatible
    change in an update; however, we may release new
    versions of this signature which add methods. To
    ensure that your code continues working, please
    locally declare which methods from this signature
    you are using; you can find instructions for how to
    do this in <https://wiki.haskell.org/Module_signature>
    .
category: Signature
author: Edward Z. Yang
extra-source-files:
    ChangeLog.md
    README.md

library
    signatures: Str
    build-depends:
        base >=4.10 && <4.11
    default-language: Haskell2010

