cabal-version: 2.2
name: Name
version: 1

library
    exposed-modules:
        Foo
        Bar
    default-language: Haskell2010
    
    if impl(ghc >=8.2)
        
        if impl(ghc >=8.4)
            ghc-options: A B C D E F
        else
            ghc-options: A B D F
    else
        
        if impl(ghc >=8.4)
            ghc-options: A C E F
        else
            ghc-options: A F
