name: test
version: 1
cabal-version: 2.0
build-type: Simple
license: UnspecifiedLicense

library
    
    if (((os(linux) && arch(mips)) || (!os(linux) && !arch(mips))) && ((os(linux) && arch(x86_64)) || (!os(linux) && arch(ppc))))
        exposed-modules:
            Bar
        buildable: False
    
    if (arch(mips) && impl(ghc ^>=8.2))
        exposed-modules:
            Foo
    
    if os(linux)
        exposed-modules:
            Hello


