cabal-version: 2.2
name: repo
version: 1.0.0
license: AllRightsReserved
homepage: https://github.com/owner/repo
bug-reports: https://github.com/owner/repo/issues
build-type: Simple

source-repository this
    type: git
    location: https://github.com/owner/repo
    tag: 1.0.0

executable foo
    main-is: Main.hs
